# engin

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  GEProfile-Runtime.json  GEProfile-Shutdown.json  GEProfile-Startup.json  build.bat  del_build.bat  imgui.ini
GE/include/GE/: GE.h  pch.h
GE/include/GE/Core/: Application.h  Base.h  Core.h  EntryPoint.h  GEInput.h  GEWindow.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  MouseCodes.h  PlatformDetection.h
GE/include/GE/Debug/: Assert.h  Instrumentor.h
GE/include/GE/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
GE/include/GE/ImGui/: ImGuiLayer.h
GE/include/GE/Platform/OpenGl/: OpenGLBuffer.h  OpenGLFrameBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  OpenGlContext.h
GE/include/GE/Platform/Windows/: WindowsInput.h  WindowsWindow.h
GE/include/GE/Renderer/: Buffer.h  Camera.h  EditorCamrea.h  Framebuffer.h  GraphicsContext.h  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h
GE/include/GE/Scene/: Components.h  Entity.h  Scene.h  SceneCamera.h  SceneSerializer.h  ScriptableEntity.h
GE/include/GE/Utils/: PlatformUtils.h
GE/src/Core/: Application.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Window.cpp
GE/src/ImGui/: ImGuiLayer.cpp
GE/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
GE/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp
GE/src/Renderer/: Buffer.cpp  EditorCamrea.cpp  Framebuffer.cpp  GraphicsContext.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp
GE/src/Scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp  SceneSerializer.cpp
GE_Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
GE_Editor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
assets/shaders/: Texture.glsl  TextureShader.glsl
bin-int/: compile_commands.json
engin/: CMakeLists.txt  build.bat
engin/include/: Application.h  Core.h  EntryPoint.h  Log.h
engin/include/GE/: Application.h  Core.h  EntryPoint.h  GE.h  GEWindow.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  WindowsWindow.h  pch.h
engin/include/GE/Core/: Timestep.h
engin/include/GE/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
engin/include/GE/ImGui/: ImGuiFn.h  ImGuiLayer.h
engin/include/GE/Renderer/: Buffer.h  GraphicsContext.h  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h  VertexAttay.h
engin/include/GE/platform/OpenGl/: OpenGLBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  OpenGlContext.h
engin/include/GE/platform/windows/: WindowsInput.h  WindowsWindow.h
engin/src/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
engin/src/ImGui/: ImGuiBuild.cpp  ImGuiFn.cpp  ImGuiLayer.cpp
engin/src/Renderer/: Buffer.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp
engin/src/platform/OpenGL/: OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
engin/src/platform/windows/: WindowsInput.cpp  WindowsWindow.cpp
sandbox/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  Timer.h
